# liblu

./: .gitignore  INSTALL  Makefile.am  README.md  configure.ac
doc/: build.sh
doc/doxygen/: Doxyfile
doc/other/: pmod12.py
doc/sphinx/source/: conf.py  group__lu__status.rst  index.rst  lu_log.rst  lu_status.rst  lu_status_codes.rst
lib/: Makefile.am  arrays.c  files.c  gl_colours.c  gl_matrices.c  gl_quaternions.c  gl_vectors.c  greyscale.c  internal.c  log.c  lu.h  luarray.c  luarray.h  luarray_mem.h  ludata.h  luexternal.h  lugrey.c  lugrey.h  luinternal.h  lulog.c  lulog.h  lumem.c  lumem.h  lumemory.h  luminmax.h  luptr.h  lurand.c  lurand.h  lusimplex.c  lusimplex.h  lustatus.h  lustr.c  lustr.h  lutile.c  lutriplex.c  lutriplex.h  random.c  simplex.c  strings.c  structs.c  (+2 more)
lib/data/: fxyzw.c  ijz.c  int32.c  void.c
lib/gl/: colours.c  matrices.c  quaternions.c  vectors.c
lib/lu/: array_macros.h  arrays.h  dynamic_memory.h  error_codes.h  files.h  gl.h  gl_colours.h  gl_matrices.h  gl_quaternions.h  gl_types.h  gl_vectors.h  greyscale.h  internal.h  log.h  ludata.h  lumem.h  lurand.h  lutile.h  memory.h  minmax.h  random.h  simplex.h  status.h  status_codes.h  strings.h  structs.h  tiles.h  vectors.h
lib/lu/data/: fxyzw.h  ij.h  ijz.h  int32.h  void.h  xy.h
lib/lu/gl/: colours.h  matrices.h  quaternions.h  types.h  vectors.h
tests/: Makefile  Makefile.am  Makefile.in  check_array.c  check_arrays.c  check_log.c  check_rand.c  check_random.c  check_simplex.c  check_str.c  check_strings.c  check_tile.c  check_tiles.c  check_triplex.c  check_vectors.c
