AC_INIT([liblu], [0.1], [andrew@acooke.org])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AM_PROG_AR()
LT_INIT
AC_PROG_CC
AM_PROG_CC_C_O
PKG_CHECK_MODULES([CHECK], [check >= 0.9.0])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile lib/Makefile tests/Makefile])
AC_OUTPUT
