
lib_LTLIBRARIES = liblu.la

liblu_la_SOURCES = arrays.c files.c greyscale.c log.c random.c	\
	simplex.c strings.c structs.c tiles.c \
	gl_vectors.c gl_matrices.c gl_quaternions.c gl_colours.c

nobase_include_HEADERS = lu/array_macros.h lu/arrays.h \
	lu/dynamic_memory.h lu/status_codes.h lu/files.h \
	lu/greyscale.h lu/log.h lu/minmax.h lu/random.h lu/simplex.h \
	lu/status.h lu/strings.h lu/structs.h lu/tiles.h lu/gl.h \
	lu/gl_types.h lu/gl_vectors.h lu/gl_matrices.h \
	lu/gl_quaternions.h lu/gl_colours.h
