
lib_LTLIBRARIES = liblu.la

VPATH=gl

liblu_la_SOURCES = arrays.c files.c greyscale.c log.c random.c	\
	simplex.c strings.c structs.c tiles.c internal.c \
	vectors.c matrices.c quaternions.c colours.c

nobase_include_HEADERS = lu/array_macros.h lu/arrays.h \
	lu/dynamic_memory.h lu/status_codes.h lu/files.h \
	lu/greyscale.h lu/log.h lu/minmax.h lu/random.h lu/simplex.h \
	lu/internal.h lu/strings.h lu/structs.h lu/tiles.h lu/gl.h \
	lu/gl/types.h lu/gl/vectors.h lu/gl/matrices.h \
	lu/gl/quaternions.h lu/gl/colours.h
