
lib_LTLIBRARIES = liblu.la

VPATH=gl:data

liblu_la_SOURCES = files.c greyscale.c log.c random.c	\
	simplex.c strings.c tiles.c internal.c \
	vectors.c matrices.c quaternions.c colours.c \
	fxyzw.c ijz.c int32.c void.c

nobase_include_HEADERS = lu/arrays.h \
	lu/memory.h lu/status.h lu/files.h \
	lu/greyscale.h lu/log.h lu/minmax.h lu/random.h lu/simplex.h \
	lu/internal.h lu/strings.h lu/structs.h lu/tiles.h lu/gl.h \
	lu/gl/types.h lu/gl/vectors.h lu/gl/matrices.h \
	lu/gl/quaternions.h lu/gl/colours.h \
	lu/data/fxyzw.h lu/data/ijz.h lu/data/int32.h lu/data/void.h
